--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.7",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5"
